# sdk-for-rust

./: Cargo.toml  LICENSE  README.md
examples/: foo_test.rs
examples/account/: update-password.md
examples/database/: create-boolean-attribute.md  create-collection.md  create-document.md  create-index.md  create-integer-attribute.md  create-ip-attribute.md  create-string-attribute.md  delete-attribute.md  get-attribute.md  get-collection.md  get-index.md  list-indexes.md
examples/functions/: create-tag.md  create.md  list-builds.md  list-runtimes.md  retry-build.md
examples/locale/: get-countries-phones.md  get-countries.md
examples/storage/: create-file.md  get-file-preview.md  get-file-view.md
examples/teams/: create.md  get-membership.md  get.md  list.md  update.md
examples/users/: create.md  get-logs.md  get-sessions.md  list.md
src/: client.rs  lib.rs  mod.rs
src/models/: attribute_boolean.rs  attribute_email.rs  attribute_enum.rs  attribute_float.rs  attribute_integer.rs  attribute_ip.rs  attribute_list.rs  attribute_string.rs  attribute_url.rs  bucket.rs  bucket_list.rs  build.rs  build_list.rs  collection.rs  collection_list.rs  continent.rs  continent_list.rs  country.rs  country_list.rs  currency.rs  currency_list.rs  deployment.rs  deployment_list.rs  document.rs  document_list.rs  domain.rs  domain_list.rs  execution.rs  execution_list.rs  file.rs  file_list.rs  function.rs  function_list.rs  health_antivirus.rs  health_queue.rs  health_status.rs  health_time.rs  index.rs  index_list.rs  jwt.rs  (+41 more)
src/services/: account.rs  avatars.rs  mod.rs  (+9 more)
(+179 files in other folders)
