[package]
name = "aw-test"
version = "0.0.1"
authors = ["Appwrite Team <team@appwrite.io>"]
edition = "2018"
description = "Appwrite Rust SDK"
license = "BSD-3-Clause"
repository = "https://github.com/PineappleIOnic/sdk-for-rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.1"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }

# Serde
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.59"